# protocolo_generico

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/constants/: CMakeLists.txt  constants.hpp
src/generic_protocol/: CMakeLists.txt  generic_protocol.cpp  generic_protocol.hpp
src/generic_protocol/connection/: CMakeLists.txt  connection.cpp  connection.hpp
src/generic_protocol/entity/: CMakeLists.txt  entity.cpp  entity.hpp  receive_message.cpp
src/generic_protocol/generic_protocol_constants/: CMakeLists.txt  generic_protocol_constants.hpp
src/generic_protocol/message/: CMakeLists.txt  message.cpp  message.hpp
src/generic_protocol/network/: CMakeLists.txt  network.cpp  network.hpp
src/generic_protocol/package/: CMakeLists.txt  package.cpp  package.hpp
src/generic_protocol/protocol/: CMakeLists.txt  protocol.cpp  protocol.hpp
src/util/: CMakeLists.txt  util.cpp  util.hpp
